--- a/nmct.ssa.cashlessproject.itcompany/Views/Shared/_Layout.cshtml
+++ b/nmct.ssa.cashlessproject.itcompany/Views/Shared/_Layout.cshtml
@@ -25,10 +25,12 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    @*<li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                     <li>@Html.ActionLink("Beheer organisaties", "Index", "Organisation")</li>
+                    <li>@Html.ActionLink("Beheer kassa's", "Index", "Register")</li>
+                    <li>@Html.ActionLink("Error logs", "Index", "ErrorLog")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
