--- a/nmct.ba.cashlessproject.ui.management/View/ChangePassword.xaml
+++ b/nmct.ba.cashlessproject.ui.management/View/ChangePassword.xaml
@@ -43,8 +43,8 @@
         <TextBlock Grid.Row="2" Grid.ColumnSpan="2" Text="Nieuw hertypen"/>
         <PasswordBox Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="3" Margin="8,20,8,20" VerticalContentAlignment="Center" Name="txtNewPasswordAgain" PasswordChanged="txtNewPasswordAgain_PasswordChanged" />
 
-        <Button Grid.Row="3" Grid.ColumnSpan="3" Content="Wijzigingen opslaan" Command="{Binding ChangePasswordCommand}"/>
+        <Button Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="3" Content="Wijzigingen opslaan" Command="{Binding ChangePasswordCommand}"/>
 
-        <TextBlock Grid.Row="4" Grid.ColumnSpan="3" Text="{Binding Error}" />
+        <TextBlock Grid.Row="4" Grid.ColumnSpan="6" Foreground="red" Text="{Binding ErrorSuccesfull}" />
     </Grid>
 </UserControl>
