--- a/nmct.ssa.cashlessproject.itcompany/Views/Organisation/Edit.cshtml
+++ b/nmct.ssa.cashlessproject.itcompany/Views/Organisation/Edit.cshtml
@@ -16,7 +16,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.Login, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Login, new { htmlAttributes = new { @class = "form-control" } })
@@ -54,7 +54,13 @@
                 @Html.EditorFor(model => model.DbPassword, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DbPassword, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
+
+        @Html.HiddenFor(model => model.Login)
+        @Html.HiddenFor(model => model.Password)
+        @Html.HiddenFor(model => model.DbName)
+        @Html.HiddenFor(model => model.DbLogin)
+        @Html.HiddenFor(model => model.DbPassword)
 
         <div class="form-group">
             @Html.LabelFor(model => model.OrganisationName, htmlAttributes: new { @class = "control-label col-md-2" })
