--- a/nmct.ssa.cashlessproject.itcompany/Views/Register/Edit.cshtml
+++ b/nmct.ssa.cashlessproject.itcompany/Views/Register/Edit.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Bewerk register @Model.Register.RegisterName (@Model.Register.Device)</h2>
 
 
 @using (Html.BeginForm())
@@ -13,7 +13,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>OrganisationRegister</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Register.ID)
