--- a/nmct.ba.cashlessproject.ui.employees/View/Order.xaml
+++ b/nmct.ba.cashlessproject.ui.employees/View/Order.xaml
@@ -69,7 +69,7 @@
             <ListView Grid.Row="2" Grid.RowSpan="4" Grid.ColumnSpan="3" ItemsSource="{Binding Products}" SelectedItem="{Binding SelectedProduct}" IsEnabled="{Binding EnableDisableRegister}">
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn DisplayMemberBinding="{Binding Path=ProductName}" Header="Product naam" Width="190"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=ProductName}" Header="Product naam" Width="180"/>
                         <GridViewColumn DisplayMemberBinding="{Binding Path=Price, StringFormat=C, ConverterCulture=nl-BE}" Header="Prijs per stuk" Width="115"/>
                     </GridView>
                 </ListView.View>
@@ -110,7 +110,7 @@
 
             <Button Grid.Row="2" Grid.Column="9" Grid.ColumnSpan="3" Content="Afrekenen" Command="{Binding CheckOutCommand}" IsEnabled="{Binding EnableDisableCheckOut}" />
             <Button Grid.Row="3" Grid.Column="9" Grid.ColumnSpan="3" Content="Annuleer bestelling" Command="{Binding CancelOrderCommand}" IsEnabled="{Binding EnableDisableCancelOrder}" />
-            <Button Grid.Row="4" Grid.Column="9" Grid.ColumnSpan="3" Content="Nieuwe klant" Command="{Binding CancelCustomerCommand}" IsEnabled="{Binding EnableDisableRegister}" />
+            <Button Grid.Row="4" Grid.Column="9" Grid.ColumnSpan="3" Content="Annueleer klant" Command="{Binding CancelCustomerCommand}" IsEnabled="{Binding EnableDisableRegister}" />
 
             <TextBlock Grid.Row="5" Grid.Column="9" Grid.ColumnSpan="3" Text="{Binding WarningBalance}" />
         </Grid>
