--- a/nmct.ba.cashlessproject.ui.management/View/Register.xaml
+++ b/nmct.ba.cashlessproject.ui.management/View/Register.xaml
@@ -36,15 +36,15 @@
         </Grid.RowDefinitions>
 
         <TextBlock Grid.ColumnSpan="2" Text="Alle kassa's:"/>
-        <ListBox Grid.Row="1" Grid.RowSpan="4" Grid.ColumnSpan="6" ItemsSource="{Binding Registers}" DisplayMemberPath="RegisterName" SelectedItem="{Binding SelectedRegister}"/>
+        <ListBox Grid.Row="1" Grid.RowSpan="7" Grid.ColumnSpan="6" ItemsSource="{Binding Registers}" DisplayMemberPath="RegisterName" SelectedItem="{Binding SelectedRegister}"/>
 
-        <TextBlock Grid.Column="6" Grid.ColumnSpan="6" Text="Kassa bemand door:"/>
-        <ListBox Grid.Row="1" Grid.Column="6" Grid.RowSpan="4" Grid.ColumnSpan="6" ItemsSource="{Binding RegisterEmployee}" DisplayMemberPath="Employee.Firstname" SelectedItem="{Binding SelectedEmployee}"/>
+        <TextBlock Grid.Column="6" Grid.ColumnSpan="6" Text="Kassa bemand door (van - tot):"/>
+        <ListBox Grid.Row="1" Grid.Column="6" Grid.RowSpan="7" Grid.ColumnSpan="6" ItemsSource="{Binding RegisterEmployee}" SelectedItem="{Binding SelectedEmployee}"/>
 
-        <TextBlock Grid.Row="5" Grid.Column="6" Grid.ColumnSpan="2" Text="Bemand van:"/>
-        <TextBlock Grid.Row="5" Grid.Column="9" Grid.ColumnSpan="3" Text="{Binding SelectedEmployee.FromTime}"/>
+        <!--<TextBlock Grid.Row="5" Grid.Column="6" Grid.ColumnSpan="2" Text="Bemand van:"/>
+        <TextBlock Grid.Row="5" Grid.Column="9" Grid.ColumnSpan="3" Text="{Binding SelectedEmployee.FromTime, ConverterCulture=nl-BE}"/>
 
         <TextBlock Grid.Row="6" Grid.Column="6" Text="Tot:"/>
-        <TextBlock Grid.Row="6" Grid.Column="9" Grid.ColumnSpan="3" Text="{Binding SelectedEmployee.UntilTime}"/>
+        <TextBlock Grid.Row="6" Grid.Column="9" Grid.ColumnSpan="3" Text="{Binding SelectedEmployee.UntilTime, ConverterCulture=nl-BE}"/>-->
     </Grid>
 </UserControl>
